src/test/ui/generics/issue-61631-default-type-param-can-reference-self-in-trait.stderr
error[E0277]: the size for values of type `[()]` cannot be known at compilation time
  --> $DIR/issue-61631-default-type-param-can-reference-self-in-trait.rs:19:6
   |
LL | impl Tsized for () {}
   |      ^^^^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[()]`
note: required by a bound in `Tsized`
  --> $DIR/issue-61631-default-type-param-can-reference-self-in-trait.rs:17:17
   |
LL | trait Tsized<P: Sized = [Self]> {}
   |                 ^^^^^ required by this bound in `Tsized`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
